test/expressions/diten/type_eqeq_value.good
type_eqeq_value.chpl:1: In function 'main':
type_eqeq_value.chpl:2: error: unresolved call '==(type int(64), 1)'
