test/expressions/diten/type_eqeq_value.chpl
proc main {
  writeln(int == 1);
  writeln(int(8) == 1);

  writeln(int != 1);
  writeln(int(8) != 1);
}
